<resources>
    <string name="app_name">ChatApp</string>


    <!--    all-->
    <string name="all_descr_icon">icono</string>

    <!--    login-->
    <string name="login_title">Ingresa tu numero de telefono</string>
    <string name="login_number">Numero</string>
    <string name="login_btn_send">Enviar OTP</string>
    <string name="login_enter_opt">Ingresa OPT enviado a tu numero</string>
    <string name="login_tv1">1</string>
    <string name="login_tv2">2</string>
    <string name="login_tv3">3</string>
    <string name="login_next">Siguiente</string>
    <string name="login_opt">OPT</string>
    <string name="login_resend_code">Renviar codigo</string>
    <string name="login_enter_username">Ingresa un username</string>
    <string name="login_username">Username</string>
    <string name="login_sig_int">Ingresar</string>
    <string name="login_err_number">Numero no valido</string>
    <string name="login_username_input">Ingresa un username</string>

    <!--    main-->
    <string name="main_menu1">Chats</string>
    <string name="main_menu2">Profile</string>

    <!--    search-->
    <string name="search_title">Buscar usuarios</string>
    <string name="search_item_me">(YO)</string>

    <!--    Chat-->
    <string name="chat_enter_msg">Escribe un mensaje</string>

    <!--    profile-->
    <string name="profile_btn">Actualizar</string>
    <string name="profile_logout">Cerrar sesión</string>
    <string name="profile_profile">Perfil</string>
    <string name="profile_data_updated">Datos actulizados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>