<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.fragment.Login1Fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/loginTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/login_tv1"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginTvTitle"
        app:layout_constraintEnd_toStartOf="@id/loginTv2"
        app:layout_constraintStart_toStartOf="@id/guidelineV1" />


    <TextView
        android:id="@+id/loginTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/loginTv1"
        app:layout_constraintEnd_toStartOf="@id/loginTv3"
        app:layout_constraintStart_toEndOf="@id/loginTv1" />


    <TextView
        android:id="@+id/loginTv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/loginTv2"
        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
        app:layout_constraintStart_toEndOf="@id/loginTv2" />


    <TextView
        android:id="@+id/loginTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginIvIcon"
        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
        app:layout_constraintStart_toStartOf="@id/guidelineV1" />

    <ImageView
        android:id="@+id/loginIvIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/all_descr_icon"
        android:src="@drawable/smartphone"
        app:backgroundTint="#fff000"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineH1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/loginCodeCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:ccpDialog_textColor="@color/color_text"
        app:ccp_showFlag="false"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH1" />

    <EditText
        android:id="@+id/loginEtNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="@drawable/style_input"
        android:elevation="4dp"
        android:hint="@string/login_number"
        android:inputType="number"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/loginCodeCountry"
        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
        app:layout_constraintStart_toEndOf="@+id/loginCodeCountry"
        app:layout_constraintTop_toTopOf="@id/loginCodeCountry" />

    <Button
        android:id="@+id/loginBtnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_btn"
        android:text="@string/login_btn_send"
        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/loginCodeCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>